test/asm/endsection.err
error: endsection.asm(4):
    Cannot output data outside of a SECTION
Assembly aborted with 1 error!
